<resources>
    <string name="app_name">Shorts</string>
    <string name="submit">SUBMIT</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="private_notes">Private Notes</string>
    <string name="alertText_Notes">ALERT[IF YOU FORGOT YOUR PASSWORD, THERE IS NO WAY TO ACCESS PRIVATE NOTES ]</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="setUpPassword">Set up your password</string>
    <string name="enterPassword">Enter your password</string>
</resources>