<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/privateModeEnabled"
        android:icon="@drawable/ic_baseline_lock_open_24"
        android:title="@string/private_notes"
        app:showAsAction="ifRoom"
        />
    <item
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/options"
        android:id="@+id/optionsBtnOfMenu"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/privateNoteBtnOfMenu"
                android:title="@string/private_notes"
                />
            <item
                android:id="@+id/deleteAllBtnOfMenu"
                android:title="@string/delete"
                />
        </menu>
    </item>
</menu>