<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <RelativeLayout
        android:id="@+id/relativeLayoutForLock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_dark_background"
        >
        <TextView
            android:id="@+id/txtViewOfAlertMsg"
            android:layout_width="match_parent"
            android:maxLines="2"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/alertText_Notes"
            />

        <TextView
            android:id="@+id/txtViewForPassMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/setUpPassword"
            android:layout_below="@+id/txtViewOfAlertMsg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            />


        <EditText
            android:id="@+id/passwordFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtViewForPassMsg"
            android:layout_marginTop="60dp"
            android:hint="@string/password"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/passwordSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/passwordFirst"
            android:layout_marginTop="20dp"
            android:hint="@string/confirmPassword"
            android:textColorHint="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/submitBtnOfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/passwordSecond"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            />
    </RelativeLayout>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customToolBarOfMainAct2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/colorPrimaryVariant"
        android:maxHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOfPrivateNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/customToolBarOfMainAct2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>